2001-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (clipMask): New method to add a clip mask to the
 	image.  Adds clipping to any image operation wherever the clip
 	mask image is tranparent.

2001-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (print): Add single quotes around file names
 	and font specifications.

2001-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (read): Ensure that only a single image frame is read.

2001-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (flattenImages): New function to flatten a
 	layered image.

	* lib/Montage.cpp (Montage): Montage initial defaults are no
 	longer drawn from ImageInfo.  MontageInfo structure is entirely
 	filled out by updateMontageInfo();

2001-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Montage.cpp (updateMontageInfo): Bugfix; colors which were
 	intentionally specified as invalid (unset) were being ignored.
  	This produced unattractive label text when doing a montage.

2001-07-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (medianFilterImage): Changed argument from
 	unsigned int to const double.
	(fillColorImage): New method.
	(strokeColorImage): New method.
	(isValidImage): New method.

	* lib/Magick++/Image.h (edge): Change argument from unsigned int to double.
	(medianFilter): Changed argument from unsigned int to const double.

	* lib/Magick++/STL.h (edgeImage): Change argument from unsigned int to double.

	* demo/demo.cpp (main): Updated to match PerlMagick demo.

2001-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (shaveImage): New function to shave edges from image.

	* lib/Image.cpp (shave): New method to shave edges from image.

2001-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (quantize): Remove conditions on whether